# LinHop

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  README.md  settings.gradle
LinHop/res/shaders/: Basic.shader  line.shader  sprite.shader  text.shader
LinHop/src/: CMakeLists.txt
LinHop/src/LinHop/: CMakeLists.txt  Entities.cpp  Entities.h  FileManager.cpp  FileManager.h  GLCall.cpp  GLCall.h  Game.cpp  Game.h  GameData.h  GameObject.cpp  GameObject.h  IndexBuffer.cpp  IndexBuffer.h  LinHop.cpp  LinHop.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  SoundPlayer.cpp  SoundPlayer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  utils.cpp  utils.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: line.shader  line_segment.glsl  sprite.shader
app/src/main/cpp/: Ball.cpp  CMakeLists.txt  Label.cpp  Label.hpp  Lazers.cpp  Lazers.hpp  Lines.cpp  Lines.hpp  Main.cpp  Main.hpp  MainAndroid.cpp  MainScene.cpp  MainScene.hpp  Sparks.cpp  Tail.cpp  Tail.hpp  Utils.cpp  c_main_example.c  c_scene.c  c_scene.h
app/src/main/cpp/game/: Ball.cpp  Ball.hpp  GameObject.hpp  IScene.hpp  Label.cpp  Label.hpp  Lasers.cpp  Lasers.hpp  Lazers.cpp  Lazers.hpp  Lines.cpp  Lines.hpp  MainScene.cpp  MainScene.hpp  SettingsScene.cpp  SettingsScene.hpp  Sparks.cpp  Sparks.hpp  Tail.cpp  Tail.hpp  Utils.cpp  Utils.hpp  c_scene.h
app/src/main/cpp/linhop/: Ball.cpp  Ball.hpp  Label.cpp  Lazers.cpp  Lines.cpp  Lines.hpp  MainScene.cpp  MainScene.hpp  Sparks.cpp  Sparks.hpp  Tail.cpp  Utils.cpp  Utils.hpp
app/src/main/cpp/spige/: CMakeLists.txt  spige.h
app/src/main/cpp/spige/src/: Audio.cpp  Audio.h  EmptyScene.h  Engine.cpp  Engine.h  Framework.cpp  Framework.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Internal.h  Object.cpp  Object.h  Window.cpp  Window.h  audio.c  audio.h  framework.c  framework.h  object.c  object.h
app/src/main/cpp/src/: Ball.cpp  Ball.hpp  CMakeLists.txt  GameObject.hpp  Label.cpp  Label.hpp  Lasers.cpp  Lasers.hpp  Lines.cpp  Lines.hpp  Main.cpp  Main.hpp  MainScene.cpp  MainScene.hpp  SettingsActivity.cpp  SettingsActivity.hpp  SettingsScene.cpp  SettingsScene.hpp  Sparks.cpp  Sparks.hpp  Tail.cpp  Tail.hpp  Util.cpp  Util.hpp  Utils.cpp  Utils.hpp  index.html
app/src/main/cpp/src/engine/: CMakeLists.txt  engine.h
app/src/main/cpp/src/engine/src/: Audio.cpp  Audio.h  Data.h  DebugScreen.cpp  DebugScreen.h  DummyActivity.h  EmptyScene.h  Engine.cpp  Engine.h  File.cpp  File.h  Framework.cpp  Framework.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Internal.h  LogActivity.cpp  LogActivity.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Window.cpp  Window.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
